ver.0.02:ログアウト機能

--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<header>
-		<h1><a href="">サンプルショッピング</a></h1>
+		<h1><a href="/items">サンプルショッピング</a></h1>
+		<p><span th:text="${@account.name}"></span>さんがログイン中 <a href="/logout">ログアウト</a></p>
 	</header>
 	<hr />
 	<main>
