ver.0.30: ヘッダとフッタの外部ファイル化

--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -3,19 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>商品一覧</title>
+<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<header>
-		<h1><a href="/items">サンプルショッピング</a></h1>
-		<p><span th:text="${@account.name}"></span>さんがログイン中 <a href="/logout">ログアウト</a></p>
-	</header>
+	<!-- ヘッダー領域：ヘッダーのの読み込み -->
+	<th:block th:replace="~{parts/header}"></th:block>
 	<hr />
+	<!-- メインコンテンツ領域 -->
 	<main>
 		
 	</main>
 	<hr  />
-	<foooter>
-		<didv class="copyright">&copy; ABCショップ</didv>
-	</foooter>
+	<!-- フッター領域：フッターの読み込み -->
+	<th:block th:replace="~{parts/footer}"></th:block>
 </body>
 </html>
