--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -11,7 +11,26 @@
 	<hr />
 	<!-- メインコンテンツ領域 -->
 	<main>
-		
+		<article>
+			<table border="1">
+				<tr>
+					<th>ID</th>
+					<th>商品名</th>
+					<th>値段</th>
+					<th></th>
+				</tr>
+				<tr th:each="item:${itemList}">
+					<td  th:text="${item.id}"></td>
+					<td  th:text="${item.name}"></td>
+					<td  th:text="${item.price}"></td>
+					<td>
+						<form action="/cart/add" method="get">
+							<button>カートに追加</button>
+						</form>
+					</td>
+				</tr>
+			</table>
+		</article>
 	</main>
 	<hr  />
 	<!-- フッター領域：フッターの読み込み -->
