--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -31,7 +31,8 @@
 					<td  th:text="${item.name}"></td>
 					<td  th:text="${item.price}"></td>
 					<td>
-						<form action="/cart/add" method="get">
+						<form action="/cart/add" method="post">
+							<input type="hidden" name="itemId" th:value="${item.id}" /> 
 							<button>カートに追加</button>
 						</form>
 					</td>
