--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Cart</title>
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 	<!-- ヘッダー領域：ヘッダーのの読み込み -->
@@ -27,7 +27,8 @@
 					<td th:text="${item.quantity}"></td>
 					<td th:text="${item.price * item.quantity}"></td>
 					<td>
-						<form action="" method="">
+						<form action="" method="post">
+							
 							<button>削除</button>
 						</form>
 					</td>
