--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -27,8 +27,8 @@
 					<td th:text="${item.quantity}"></td>
 					<td th:text="${item.price * item.quantity}"></td>
 					<td>
-						<form action="" method="post">
-							
+						<form action="/cart/delete" method="post">
+							<input type="hidden" name="itemId" th:value="${item.id}" />
 							<button>削除</button>
 						</form>
 					</td>
