--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -11,34 +11,9 @@
 	<hr />
 	<main>
 		<article>
-			<table border="1">
-				<tr>
-					<th>NO</th>
-					<th>商品</th>
-					<th>値段</th>
-					<th>個数</th>
-					<th>小計</th>
-					<th></th>
-				</tr>
-				<tr th:each="item:${@cart.items}">
-					<td th:text="${item.id}"></td>
-					<td th:text="${item.name}"></td>
-					<td th:text="${item.price}"></td>
-					<td th:text="${item.quantity}"></td>
-					<td th:text="${item.price * item.quantity}"></td>
-					<td>
-						<form action="/cart/delete" method="post">
-							<input type="hidden" name="itemId" th:value="${item.id}" />
-							<button>削除</button>
-						</form>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="5">総計：[[${@cart.totalPrice}]]</td>
-					<td></td>
-				</tr>
-			</table>
-			<form action="" method="">
+			<!-- カート詳細領域の読み込み -->
+			<th:block th:replace="cartItem"></th:block>
+			<form action="/order" method="get">
 				<button>注文する</button>
 			</form>
 		</article>
