ver.0.33: 顧客情報永続化

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -69,4 +69,9 @@ nav a:not(:first-child) {
   padding-left: 10px;
 }
 
+/* 注文番号 */
+.orderNo {
+  color: tomato;
+}
+
 /*# sourceMappingURL=style.css.map */
